--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "AppName": {
-    "en": "Spotify Apps API Tutorial"
+    "en": "Tabata Timer"
   },
-  "BundleIdentifier": "api-tutorial",
+  "BundleIdentifier": "tabata-timer",
   "AppDescription": {
-    "en": "A tutorial app for Spotify Apps API"
+    "en": "A Tabata Timer that keeps time with your music"
   },
   "AppIcon": {
     "18x18": "img/icons/icon-18x18.png",
@@ -18,20 +18,6 @@
   ],
   "BundleType": "Application",
   "BundleVersion": "0.2",
-  "DefaultTabs": [
-    {
-      "arguments": "index",
-      "title": {
-        "en": "Home"
-      }
-    },
-    {
-      "arguments": "tabs",
-      "title": {
-        "en": "How to use tabs"
-      }
-    }
-  ],
   "Dependencies": {
     "api": "1.38.0",
     "views": "1.18.1"
